syntax = "proto3";

option csharp_namespace = "Utilities.Billing.Api.Protos";

package billing;

service BillingService 
{
}