syntax = "proto3";

option csharp_namespace = "Utilities.Billing.Api.Protos";

import "google/api/annotations.proto";

package billing;

message AccountType {
  uint64 id = 1;
  string name = 2;
  string token = 3;
  uint64 created = 4;
}

message AccountHolder {
  uint64 id = 1;
  string wallet = 2;
  uint64 created = 3;
}

message Account {
  uint64 id = 1;
  uint64 accountHolderId = 2;
  uint64 accountTypeId = 3;
  string wallet = 4;
  uint64 created = 5;
}

message ExtendedAccount {
  uint64 id = 1;
  uint64 accountHolderId = 2;
  uint64 accountTypeId = 3;
  string wallet = 4;
  uint64 created = 5;

  // Transfered only in get one request
  AccountHolder accountHolder = 6;
  // Transfered only in get one request
  AccountType accountType = 7;
}

message Invoice {
  uint64 id = 1;
  uint64 accountId = 2;
  double amount = 3;
  uint64 date = 4;
  optional uint64 amountPaid = 5;
  optional uint64 dateTo = 6;
  uint64 created = 7;
}

message ExtendedInvoice {
  uint64 id = 1;
  uint64 accountId = 2;
  double amount = 3;
  uint64 date = 4;
  optional uint64 amountPaid = 5;
  optional uint64 dateTo = 6;
  uint64 created = 7;
  
  // Transfered only in get one request
  ExtendedAccount account = 8;
}

message Payment {
  uint64 id = 1;
  uint64 accountId = 2;
  double amount = 3;
  uint64 date = 4;
  string status = 5;
  string transaction = 6;
  uint64 created = 7;
}

message ExtendedPayment {
  uint64 id = 1;
  uint64 accountId = 2;
  double amount = 3;
  uint64 date = 4;
  string status = 5;
  optional string transaction = 6;
  uint64 created = 7;
  
  // Transfered only in get one request
  ExtendedAccount account = 8;
}